[gd_scene load_steps=13 format=3 uid="uid://dyt7ykcxo631i"]

[ext_resource type="Script" path="res://tapeworm_tom.gd" id="1_1divi"]
[ext_resource type="Texture2D" uid="uid://bxlok7eip1k24" path="res://tapeworm-tom.png" id="2_nke13"]
[ext_resource type="AudioStream" uid="uid://d27klepnb2rqq" path="res://tapeworm-death.wav" id="3_kicw1"]
[ext_resource type="AudioStream" uid="uid://daywho6gfabl3" path="res://footsteps.wav" id="4_rpm2y"]

[sub_resource type="Animation" id="Animation_1vf3y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_oucb1"]
resource_name = "idle"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_bfh0s"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_r63f4"]
resource_name = "walk"
length = 1.2
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.45, 1.05),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_footstep"
}, {
"args": [],
"method": &"play_footstep"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kxmr8"]
_data = {
"RESET": SubResource("Animation_1vf3y"),
"idle": SubResource("Animation_oucb1"),
"jump": SubResource("Animation_bfh0s"),
"walk": SubResource("Animation_r63f4")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1yqpp"]
radius = 9.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b0brn"]
radius = 7.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_akic8"]
radius = 9.0
height = 22.0

[node name="TapewormTom" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_1divi")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, -16)
texture = ExtResource("2_nke13")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kxmr8")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_1yqpp")

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -7)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_b0brn")
debug_color = Color(0.960784, 0, 0.509804, 0.419608)

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_akic8")
debug_color = Color(0, 0.647059, 0.164706, 0.419608)

[node name="DeathSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kicw1")

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="FootstepSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rpm2y")
volume_db = 2.0

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
